# budget_app

./: .env.sample  .gitignore  LICENSE  README.md  app.py  models.py  pyproject.toml
migrations/versions/: 2655a9ed3d11_create_tables.py  3550ef47aa3c_note_about_new_changes.py  e114db6f53fc_initial_migration.py  e1c5361166b5_add_unique_constraint_for_user_id_and_.py
src/budget_app/: __init__.py  app.py  cli.py  extensions.py  models.py  old_routes.py  routes.py  utils.py  utils_test.py
src/budget_app/frontend/: budget.html  budgets.html  create_budget.html  demo_budget.html  edit_budget.html  index.html  login.html  old_index.html  register.html  unavailable_page.html
src/budget_app/old_templates/: profile.html
src/budget_app/old_templates/budget/: budget.html  create_budget.html
src/budget_app/old_templates_and_route/: budget_items.html  index.html  layout.html  login.html  old_routes.py  view_budget.html
src/budget_app/routes/: api.py  web.py
src/budget_app/services/auth/: auth_service.py  auth_service_test.py  middleware.py
src/budget_app/services/budget/: budget_service.py  budget_service_test.py  transform.py  transform_test.py  validate_input.py  validate_input_test.py
src/budget_app/static/js/: budget.js  budgets.js  create_budget.js  edit_budget.js  edit_item_modal.js  login.js  nav.js  old_budget.js  register.js
src/budget_app/static/partials/: add_item_modal.html  edit_item_modal.html  nav.html
src/budget_app/templates/: budgets.html  create_budget.html  index.html  layout.html  login.html  signup.html  view_budget.html
templates/: index.html  layout.html  profile.html  signin.html
tests/: test_app.py
(+17 files in other folders)
